--- a/voronoi.html
+++ b/voronoi.html
@@ -6,7 +6,10 @@
 <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 <link href='https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css' rel='stylesheet' />
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js'></script>
+<script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
+<!--
 <script src='https://api.mapbox.com/mapbox.js/plugins/turf/v3.0.11/turf.min.js'></script>
+-->
 <script src='./fill-pattern-image.js'></script>
 <style>
 body { margin:0; padding:0; }
@@ -30,8 +33,8 @@ var map = new mapboxgl.Map({
   style: './style.json', // stylesheet location
   center: [139.78148, 35.768793], // starting position [lng, lat]
   zoom: 15, // starting zoom
-  maxZoom: 18
-//  localIdeographFontFamily: "MS Gothic"
+  maxZoom: 18,
+  localIdeographFontFamily: "MS Gothic"
 });
 
 //Add Images
@@ -63,10 +66,10 @@ map.on('click', function(e) {
 });
 
 
-//Turf.jsでクリック地点に一番近い郵便局を強調表示する。
+//Turf.jsで郵便局のボロノイ図を表示する。
 
 map.on('load', function() {
-  map.addSource('nearest-target', {
+  map.addSource('result-target', {
     type: 'geojson',
     data: {
       type: 'FeatureCollection',
@@ -78,8 +81,8 @@ map.on('load', function() {
 
 map.on('click', function(e) {
   
-  if(map.getLayer('nearest-target')){
-    map.removeLayer('nearest-target');
+  if(map.getLayer('result-target')){
+    map.removeLayer('result-target');
   }
   
   //ベクトルタイルのスタイルIDで地物を取得（画面内にレンダリングされたもののみ）。
@@ -103,23 +106,32 @@ map.on('click', function(e) {
   console.log("クリックポイント");
   console.log(e.lngLat);
   
-  var nearestTarget = turf.nearest(clickPoints, targetFeatures);
+  
+  //ボロノイ
+  var map_bbox = map.getBounds();
+  
+  var options = {
+    bbox: [map_bbox._sw.lng, map_bbox._sw.lat, map_bbox._ne.lng, map_bbox._ne.lat]
+  };
+  var resultTarget = turf.voronoi(targetFeatures, options);
+  
+  console.log(options);
+  console.log(resultTarget);
 
-  if (nearestTarget !== null) {
-    map.getSource('nearest-target').setData({
-      type: 'FeatureCollection',
-      features: [
-        nearestTarget
-      ]
-    });
+  if (resultTarget !== null) {
+    map.getSource('result-target').setData(
+      resultTarget
+    );
     
     map.addLayer({
-      id: 'nearest-target',
-      type: 'circle',
-      source: 'nearest-target',
+      id: 'result-target',
+      type: 'fill',
+      source: 'result-target',
+      layout: {},
       paint: {
-        'circle-radius': 20,
-        'circle-color': '#FFDDCC'
+        'fill-opacity': 0.8,
+        'fill-color': '#FFDDCC',
+        'fill-outline-color': '#FF0000'
       }
     }, 'gsibv-vectortile-layer-2566');
   }else{
