--- a/bboxClip.html
+++ b/bboxClip.html
@@ -353,7 +353,7 @@ map.on('click', function(e) {
             if( eachTargetBuildingBboxClip.geometry.coordinates[i].length > 0 ){
               //何もしない
             }else{
-              eachTargetBuildingBboxClip.geometry.coordinates.splice(i,i);
+              eachTargetBuildingBboxClip.geometry.coordinates.splice(i,);
             }
           }
         }
