update style and related script

--- a/clustersKmeans.html
+++ b/clustersKmeans.html
@@ -7,10 +7,6 @@
 <link href='https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css' rel='stylesheet' />
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js'></script>
 <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
-<!--
-<script src='https://api.mapbox.com/mapbox.js/plugins/turf/v3.0.11/turf.min.js'></script>
--->
-<script src='./fill-pattern-image.js'></script>
 <style>
 body { margin:0; padding:0; }
 #map {
@@ -37,15 +33,30 @@ var map = new mapboxgl.Map({
   localIdeographFontFamily: "MS Gothic"
 });
 
-//Add Images
-addFillPatternImages();
 
 map.addControl(new mapboxgl.NavigationControl(), 'bottom-right');
 map.addControl(new mapboxgl.ScaleControl() );
 
 /* turf.js ------------------------------------------------------------------------------------------- */
 
-//普通建物 "id":"gsibv-vectortile-layer-2522"
+//解析対象の建物を1レイヤとして加えておく。
+//"map"のloadが終わったら、読み込まれるようにする。
+map.on('load', function(e) {
+  map.addLayer({
+    id: 'target-layers',
+    type: 'fill',
+    source: 'gsibv-vectortile-source-1-4-16',
+    'source-layer': 'building',
+    filter: [ 
+      "all",
+      ["==", "$type", "Polygon"]
+    ],
+    paint: {
+      'fill-opacity': 0,
+      'fill-color': '#FFFFFF'
+    }
+  });
+});
 
 //ポップアップ表示
 var popup = new mapboxgl.Popup();
@@ -57,7 +68,7 @@ map.on('click', function(e) {
   }
   
 
-  var features = map.queryRenderedFeatures(e.point, { layers: ['gsibv-vectortile-layer-2154', 'gsibv-vectortile-layer-2140']});
+  var features = map.queryRenderedFeatures(e.point, { layers: ['target-layers']});
   if (!features.length) {
     popup.remove();
     return;
@@ -142,7 +153,7 @@ map.on('click', function(e) {
   //ベクトルタイルのスタイルIDで地物を取得（画面内にレンダリングされたもののみ）。
   //Mapboxの map.queryRenderedFeaturesで得られたものをそのまま載せるだけではダメなようである。
   //http://turfjs.org/docs/#nearestPoint にあるように、turf.point/turf.featureCollectionで変換が必要みたい。
-  var targetsQuery = map.queryRenderedFeatures({ layers: ['gsibv-vectortile-layer-2154', 'gsibv-vectortile-layer-2140'] }); //目的のレイヤIDでレンダリングされる地物を取得
+  var targetsQuery = map.queryRenderedFeatures({ layers: ['target-layers'] }); //目的のレイヤIDでレンダリングされる地物を取得
   var targetsList = new Array;
   
   console.log(targetsQuery);
@@ -227,7 +238,7 @@ map.on('click', function(e) {
       },
       paint: {
       }
-    }, 'gsibv-vectortile-layer-2816');
+    });
     */
 
     //centroid points in bbox
@@ -245,7 +256,7 @@ map.on('click', function(e) {
       },
       paint: {
       }
-    }, 'gsibv-vectortile-layer-2816');
+    });
 
     //bbox
     map.getSource('bbox').setData(
@@ -261,7 +272,7 @@ map.on('click', function(e) {
         'fill-color': '#FFDDDD',
         'fill-outline-color': '#FF0000'
       }
-    }, 'gsibv-vectortile-layer-2814');
+    });
 
     //k-means cluster
     map.getSource('kmeans').setData(
@@ -304,7 +315,7 @@ map.on('click', function(e) {
         '#a3a3a3'
         ]
       }
-    }, 'gsibv-vectortile-layer-2814');
+    });
 
   }else{
     console.log("error?")
