--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
 <link href='https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css' rel='stylesheet' />
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js'></script>
 <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
-<script src='./fill-pattern-image.js'></script>
 <style>
 body { margin:0; padding:0; }
 #map {
@@ -34,21 +33,36 @@ var map = new mapboxgl.Map({
 //  localIdeographFontFamily: "MS Gothic"
 });
 
-//Add Images
-addFillPatternImages();
 
 map.addControl(new mapboxgl.NavigationControl(), 'bottom-right');
 map.addControl(new mapboxgl.ScaleControl() );
 
 /* turf.js ------------------------------------------------------------------------------------------- */
 
-//郵便局 "id":"gsibv-vectortile-layer-2566"
+//"map"のloadが終わったら、読み込まれるようにする。
+map.on('load', function(e) {
+  map.addLayer({
+    id: 'target-layers',
+    type: 'circle',
+    source: 'gsibv-vectortile-source-1-4-16',
+    'source-layer': 'symbol',
+    filter: [ //フィルタリング
+      "any",
+        ['==', ['get', 'ftCode'], 3218]
+    ],
+    paint: {
+      'circle-radius': 15,
+      'circle-opacity': 0,
+      'circle-color': '#FFFFFF'
+    }
+  });
+});
 
 //ポップアップ表示
 var popup = new mapboxgl.Popup();
 
 map.on('click', function(e) {
-  var features = map.queryRenderedFeatures(e.point, { layers: ['gsibv-vectortile-layer-2566']});
+  var features = map.queryRenderedFeatures(e.point, { layers: ['target-layers']});
   if (!features.length) {
     popup.remove();
     return;
@@ -85,7 +99,7 @@ map.on('click', function(e) {
   //ベクトルタイルのスタイルIDで地物を取得（画面内にレンダリングされたもののみ）。
   //Mapboxの map.queryRenderedFeaturesで得られたものをそのまま載せるだけではダメなようである。
   //http://turfjs.org/docs/#nearestPoint にあるように、turf.point/turf.featureCollectionで変換が必要みたい。
-  var targetsQuery = map.queryRenderedFeatures({ layers: ['gsibv-vectortile-layer-2566'] }); //郵便局を取得
+  var targetsQuery = map.queryRenderedFeatures({ layers: ['target-layers'] }); //郵便局を取得
   var targetsList = new Array;
   
   if(targetsQuery.length > 0){
@@ -119,9 +133,10 @@ map.on('click', function(e) {
       source: 'nearest-target',
       paint: {
         'circle-radius': 20,
+        'circle-opacity': 0.5,
         'circle-color': '#FFDDCC'
       }
-    }, 'gsibv-vectortile-layer-2566');
+    }, 'target-layers');
   }else{
     console.log("error?")
   }
