--- a/buffer.html
+++ b/buffer.html
@@ -7,7 +7,6 @@
 <link href='https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.css' rel='stylesheet' />
 <script src='https://api.mapbox.com/mapbox-gl-js/v1.6.1/mapbox-gl.js'></script>
 <script src='https://npmcdn.com/@turf/turf/turf.min.js'></script>
-<script src='./fill-pattern-image.js'></script>
 <style>
 body { margin:0; padding:0; }
 #map {
@@ -34,8 +33,6 @@ var map = new mapboxgl.Map({
 //  localIdeographFontFamily: "MS Gothic"
 });
 
-//Add Images
-addFillPatternImages();
 
 map.addControl(new mapboxgl.NavigationControl(), 'bottom-right');
 map.addControl(new mapboxgl.ScaleControl() );
@@ -49,7 +46,7 @@ map.on('load', function(e) {
   map.addLayer({
     id: 'target-way',
     type: 'line',
-    source: 'gsibv-vectortile-source-1-4-17',
+    source: 'gsibv-vectortile-source-1-4-16',
     'source-layer': 'railway',
     filter: [ //駅部分のフィルタリング
       "all",
@@ -60,7 +57,7 @@ map.on('load', function(e) {
       'line-opacity': 0,
       'line-color': '#FFFFFF'
     }
-  }, 'gsibv-vectortile-layer-1994');
+  });
 });
 
 //ポップアップ表示
@@ -165,10 +162,10 @@ map.on('click', function(e) {
   
   //バッファー
   //var cellSize = 5000 / Math.pow( 2, map.getZoom() );
-  var cellSize = 1 // km
+  var cellSize = 0.5 // km
   
   var bufferTarget = turf.buffer(targetFeatures, cellSize);
-  
+  console.log( bufferTarget );
   
   if (bufferTarget !== null) {
 
@@ -184,7 +181,7 @@ map.on('click', function(e) {
       paint: {
         'line-color': '#FF0000'
       }
-    }, 'gsibv-vectortile-layer-2814');
+    });
 
     //buffer
     map.getSource('buffer-target').setData(
@@ -199,7 +196,7 @@ map.on('click', function(e) {
         'fill-color': '#FF0000',
         'fill-opacity': 0.2
       }
-    }, 'gsibv-vectortile-layer-2169');
+    });
     
   }else{
     console.log("error?")
